--- a/dashboard-client/package.json
+++ b/dashboard-client/package.json
@@ -8,6 +8,8 @@
   "bugs": {
     "url": "https://github.com/creativetimofficial/material-dashboard-react/issues"
   },
+  "proxy": "http://localhost:8000",
+
   "repository": {
     "type": "git",
     "url": "git+https://github.com/creativetimofficial/material-dashboard-react.git"
